# rust_code

./: README.md  kingshot.py  kingshot.txt  ks_thrown.py  starcraft.py  starcraft.txt
Project1/: Cargo.toml  readme.md
Project1/src/: main.rs  main2.rs  main3.rs
commands/: chmod.rs  ls.rs
games/: readme.md
games/Gfx_crawler/: Cargo.toml  main.rs  readme.md
games/dungeon/: main.rs  readme.md
games/simple/: Cago.toml  main.rs
package_mgr/: Cargo.toml  main.rs  main2.rs  readme.md
rust1/: readme.md  rustcode
rustedit2/: Cargo.toml
rustedit2/src/: main.rs
rusteditor/: Cargo.toml  readme.md  rustedit.rs  rustedit2.readme  rustedit2.rs
