[package]
name = "enhanced-network-pc-manager"
version = "2.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.0"
eframe = "0.24"
egui = "0.24"
egui_plot = "0.24"
plotters = "0.3"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
sysinfo = "0.29"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ipnetwork = "0.20"
rand = "0.8"
