[package]
name = "package-snapshot-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.27"
eframe = { version = "0.27", features = ["default"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"