[package]
name = "package-snapshot-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
egui = "0.23"
egui_extras = "0.23"
eframe = "0.23"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.29"
